Fix hamburger menu on mobile devices.

--- a/css/menu.css
+++ b/css/menu.css
@@ -103,7 +103,7 @@
     top: 0;
 }
 
-@media (min-width: 48em) {
+@media (min-width: 767px) {
     .header li {
         float: left;
     }
